--- a/index.html
+++ b/index.html
@@ -46,9 +46,27 @@
                             <label for="date">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
+
                         <li class="list-group-item bg-dark" style="font-family:inherit; font-size: 1rem;">
-                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                            <label for="cityEntered">Enter a City</label>
+                            <input type="text" id="city" />
                         </li>
+
+                        <li class="list-group-item bg-dark" style="font-family:inherit; font-size: 1rem;">
+                            <label for="stateEntered">Enter a State</label>
+                            <input type="text" id="state" />
+                        </li>
+
+                        <li class="list-group-item bg-dark" style="font-family:inherit; font-size: 1rem;">
+                            <label for="countryEntered">Enter a Country</label>
+                            <input type="text" id="country" />
+                        </li>
+
+                        <li class="list-group-item bg-dark" style="font-family:inherit; font-size: 1rem;">
+                            <label for="shapeEntered">Enter a Shape</label>
+                            <input type="text" id="shape" />
+                        </li>
+
                     </ul>
                 </form>
 
